# Verifiai

./: .env.example  .gitignore  DEMO_GUIDE.md  LICENSE  README.md  deploy-vercel.sh  docker-compose.dev.yml  docker-compose.yml  explanation.md  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  turbo.json  vercel.json  vitest.config.ts  vitest.setup.ts
.github/workflows/: ci.yml  deploy.yml
backend/: .env.example  Dockerfile  README.md  alembic.ini  pyproject.toml  run.py  run_worker.py  test_rewards.py
backend/app/core/: __init__.py  config.py  security.py
backend/app/db/: __init__.py  database.py
backend/src/: __init__.py  config.py  database.py  main.py
backend/src/api/: __init__.py  dependencies.py
backend/src/api/routes/: __init__.py  agents.py  auth.py  dashboard.py  models.py  proofs.py  rewards.py  settlements.py  swarms.py  users.py  websocket.py
backend/src/core/: __init__.py  config.py  database.py  redis.py
backend/src/migrations/: env.py
backend/src/migrations/versions/: 0001_initial.py
backend/src/schemas/: __init__.py  agent.py  common.py  model.py  proof.py  settlement.py  swarm.py  user.py
backend/src/workers/: __init__.py  celery_app.py
backend/src/workers/tasks/: __init__.py  agents.py  notifications.py  proofs.py  settlements.py
contracts/: Move.toml
contracts/sources/: coordinator.move  events.move  registry.move  settlement.move  verifier.move
frontend/: .env.example  Dockerfile  next.config.js  package.json  tailwind.config.js
frontend/.next/: app-build-manifest.json  react-loadable-manifest.json  trace
frontend/.next/cache/: .tsbuildinfo
frontend/.next/server/: app-paths-manifest.json  edge-runtime-webpack.js  middleware-manifest.json  middleware-react-loadable-manifest.js  server-reference-manifest.js  server-reference-manifest.json  webpack-runtime.js
frontend/.next/server/app/: page.js  page_client-reference-manifest.js
frontend/.next/server/src/: middleware.js
frontend/.next/static/chunks/: webpack.js  (+4 more)
frontend/src/: middleware.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/hooks/: use-api.ts
frontend/src/lib/: api.ts  aptos.ts  hooks.ts  utils.ts
keys/: proving_key.json  verification_key.json
monitoring/: prometheus.yml
(+160 files in other folders)
